--- a/desktop/applis/apps/apps_util/pom.xml
+++ b/desktop/applis/apps/apps_util/pom.xml
@@ -16,6 +16,7 @@
 		<module>threads</module>
 		<module>random</module>
 		<module>stream</module>
+		<module>expressionlanguageint</module>
 		<module>expressionlanguageutil</module>
 		<module>expressionlanguageutilimpl</module>
 		<module>expressionlanguagefiles</module>
