--- a/desktop/applis/apps/apps_util/expressionlanguageint/pom.xml
+++ b/desktop/applis/apps/apps_util/expressionlanguageint/pom.xml
@@ -7,14 +7,14 @@
         <artifactId>apps_util</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>expressionlanguageutil</groupId>
-	<artifactId>expressionlanguageutil</artifactId>
+	<groupId>expressionlanguageint</groupId>
+	<artifactId>expressionlanguageint</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-            <groupId>expressionlanguageint</groupId>
-            <artifactId>expressionlanguageint</artifactId>
+            <groupId>expressionlanguage</groupId>
+            <artifactId>expressionlanguage</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
