--- a/desktop/applis/apps/gui/guicommon/pom.xml
+++ b/desktop/applis/apps/gui/guicommon/pom.xml
@@ -13,6 +13,11 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
+			<groupId>expressionlanguageint</groupId>
+			<artifactId>expressionlanguageint</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>formathtml</groupId>
 			<artifactId>formathtml</artifactId>
 			<version>1.0-SNAPSHOT</version>
