--- a/desktop/applis/apps/bean/pom.xml
+++ b/desktop/applis/apps/bean/pom.xml
@@ -13,6 +13,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>bean_core</module>
+		<module>bean_help</module>
 		<module>formatconst</module>
 		<module>bean_games</module>
 	</modules>
