--- a/desktop/applis/apps/gui/gui_games/cardgamesgui/pom.xml
+++ b/desktop/applis/apps/gui/gui_games/cardgamesgui/pom.xml
@@ -43,5 +43,10 @@
 			<artifactId>scripts_core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>bean_help</groupId>
+			<artifactId>bean_help</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
