--- a/desktop/applis/apps/sys_apps/pom.xml
+++ b/desktop/applis/apps/sys_apps/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>sys_apps</artifactId>
 	<packaging>pom</packaging>
 	<modules>
+		<module>other</module>
 		<module>infos</module>
 		<module>def_fact</module>
 		<module>other_fact</module>
