--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -2,6 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 					http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!--parent>
+       <groupId>projects</groupId>
+        <artifactId>projects</artifactId>
+        <version>2.0</version>
+    </parent-->
 
 	<groupId>desktop</groupId>
 	<artifactId>desktop</artifactId>
