--- a/desktop/applis/apps/pom.xml
+++ b/desktop/applis/apps/pom.xml
@@ -60,4 +60,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
