--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -16,6 +16,15 @@
 		<module>applis</module>
 	</modules>
 	<properties>
+		<!--sonar.issue.ignore.multicriteria>e01,e02,e03,e04,e1,e2,e3,e4,e5,e6,e7</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria.e01.ruleKey>*</sonar.issue.ignore.multicriteria.e01.ruleKey>
+		<sonar.issue.ignore.multicriteria.e01.resourceKey>/src/main/java/aiki/sml/imgs/**/*</sonar.issue.ignore.multicriteria.e01.resourceKey>
+		<sonar.issue.ignore.multicriteria.e02.ruleKey>*</sonar.issue.ignore.multicriteria.e02.ruleKey>
+		<sonar.issue.ignore.multicriteria.e02.resourceKey>/src/main/java/aiki/sml/init/**/*</sonar.issue.ignore.multicriteria.e02.resourceKey>
+		<sonar.issue.ignore.multicriteria.e03.ruleKey>*</sonar.issue.ignore.multicriteria.e03.ruleKey>
+		<sonar.issue.ignore.multicriteria.e03.resourceKey>/src/main/java/aiki/sml/trs/**/*</sonar.issue.ignore.multicriteria.e03.resourceKey>
+		<sonar.issue.ignore.multicriteria.e04.ruleKey>*</sonar.issue.ignore.multicriteria.e04.ruleKey>
+		<sonar.issue.ignore.multicriteria.e04.resourceKey>/src/main/java/code/scripts/**/*</sonar.issue.ignore.multicriteria.e04.resourceKey-->
 		<sonar.issue.ignore.multicriteria>e1,e2,e3,e4,e5,e6,e7</sonar.issue.ignore.multicriteria>
 		<sonar.issue.ignore.multicriteria.e1.ruleKey>java:S5961</sonar.issue.ignore.multicriteria.e1.ruleKey>
 		<sonar.issue.ignore.multicriteria.e1.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e1.resourceKey>
@@ -31,5 +40,6 @@
 		<sonar.issue.ignore.multicriteria.e6.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e6.resourceKey>
 		<sonar.issue.ignore.multicriteria.e7.ruleKey>squid:S00117</sonar.issue.ignore.multicriteria.e7.ruleKey>
 		<sonar.issue.ignore.multicriteria.e7.resourceKey>**/*.java</sonar.issue.ignore.multicriteria.e7.resourceKey>
+		<sonar.exclusions>/src/main/java/aiki/sml/imgs/**/*,/src/main/java/aiki/sml/init/**/*,/src/main/java/aiki/sml/trs/**/*,/src/main/java/code/scripts/**/*</sonar.exclusions>
 	</properties>
 </project>
