--- a/desktop/applis/apps/sys_apps/other_fact/pom.xml
+++ b/desktop/applis/apps/sys_apps/other_fact/pom.xml
@@ -21,5 +21,10 @@
 			<artifactId>other</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>applications</groupId>
+			<artifactId>applications</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
