--- a/desktop/applis/apps/sys_apps/infos_core/pom.xml
+++ b/desktop/applis/apps/sys_apps/infos_core/pom.xml
@@ -14,6 +14,11 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
+			<groupId>random</groupId>
+			<artifactId>random</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>network</groupId>
 			<artifactId>network</artifactId>
 			<version>1.0-SNAPSHOT</version>
