--- a/desktop/applis/apps/pom.xml
+++ b/desktop/applis/apps/pom.xml
@@ -21,6 +21,7 @@
 		<module>sys_apps</module>
 		<module>main</module>
 		<module>other_main</module>
+		<module>young</module>
 	</modules>
 	<build>
 		<plugins>
