--- a/desktop/applis/main/young/pom.xml
+++ b/desktop/applis/main/young/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-       <groupId>apps</groupId>
-        <artifactId>apps</artifactId>
+       <groupId>main</groupId>
+        <artifactId>main</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>main</groupId>
-	<artifactId>main</artifactId>
+	<groupId>young</groupId>
+	<artifactId>young</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -37,7 +37,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>code.vm.applications.main.MainClass</mainClass>
+							<mainClass>code.vm.applications.main.young.MainClass</mainClass>
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 						</manifest>
@@ -61,7 +61,7 @@
 							<outfile>${project.build.directory}/Applications.exe</outfile>
 							<downloadUrl>http://java.com/download</downloadUrl>
 							<classPath>
-								<mainClass>code.vm.applications.main.MainClass</mainClass>
+								<mainClass>code.vm.applications.main.young.MainClass</mainClass>
 								<preCp>anything</preCp>
 							</classPath>
 							<jre>
@@ -78,8 +78,18 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>def</groupId>
-			<artifactId>def</artifactId>
+			<groupId>infos</groupId>
+			<artifactId>infos</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>def_back</groupId>
+			<artifactId>def_back</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>applications</groupId>
+			<artifactId>applications</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
