--- a/desktop/applis/main/def_main/pom.xml
+++ b/desktop/applis/main/def_main/pom.xml
@@ -3,18 +3,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-       <groupId>apps</groupId>
-        <artifactId>apps</artifactId>
+       <groupId>main</groupId>
+        <artifactId>main</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>other_main</groupId>
-	<artifactId>other_main</artifactId>
+	<groupId>def_main</groupId>
+	<artifactId>def_main</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.8</jdk.version>
 	</properties>
 	<build>
 		<finalName>Applications</finalName>
@@ -38,7 +37,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>code.vm.applications.main.other.MainClass</mainClass>
+							<mainClass>code.vm.applications.main.MainClass</mainClass>
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 						</manifest>
@@ -62,7 +61,7 @@
 							<outfile>${project.build.directory}/Applications.exe</outfile>
 							<downloadUrl>http://java.com/download</downloadUrl>
 							<classPath>
-								<mainClass>code.vm.applications.main.other.MainClass</mainClass>
+								<mainClass>code.vm.applications.main.MainClass</mainClass>
 								<preCp>anything</preCp>
 							</classPath>
 							<jre>
@@ -79,18 +78,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>infos</groupId>
-			<artifactId>infos</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>other_fact</groupId>
-			<artifactId>other_fact</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>applications</groupId>
-			<artifactId>applications</artifactId>
+			<groupId>def</groupId>
+			<artifactId>def</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
