--- a/desktop/applis/main/standalones/pom.xml
+++ b/desktop/applis/main/standalones/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 					http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-       <groupId>applis</groupId>
-        <artifactId>applis</artifactId>
+       <groupId>main</groupId>
+        <artifactId>main</artifactId>
         <version>2.0</version>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
