--- a/desktop/applis/apps/sys_apps/sys_apps_gui/infos_core/pom.xml
+++ b/desktop/applis/apps/sys_apps/sys_apps_gui/infos_core/pom.xml
@@ -14,6 +14,11 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
+			<groupId>random</groupId>
+			<artifactId>random</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>compos_core</groupId>
 			<artifactId>compos_core</artifactId>
 			<version>1.0-SNAPSHOT</version>
