--- a/desktop/applis/apps/sys_apps/sys_apps_gui/infos_core/pom.xml
+++ b/desktop/applis/apps/sys_apps/sys_apps_gui/infos_core/pom.xml
@@ -23,5 +23,10 @@
 			<artifactId>compos_core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>javazoom</groupId>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
