--- a/desktop/applis/apps/sys_apps/sys_apps_gui/pom.xml
+++ b/desktop/applis/apps/sys_apps/sys_apps_gui/pom.xml
@@ -13,6 +13,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>infos_core</module>
+		<module>infos_deps</module>
 		<module>other</module>
 		<module>def_fact</module>
 		<module>other_fact</module>
