--- a/desktop/applis/apps/sys_apps/def_standalones/pom.xml
+++ b/desktop/applis/apps/sys_apps/def_standalones/pom.xml
@@ -27,8 +27,8 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>infos_core</groupId>
-			<artifactId>infos_core</artifactId>
+			<groupId>infos_deps</groupId>
+			<artifactId>infos_deps</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
