--- a/desktop/applis/apps/sys_apps/sys_apps_gui/infos_deps/pom.xml
+++ b/desktop/applis/apps/sys_apps/sys_apps_gui/infos_deps/pom.xml
@@ -8,25 +8,20 @@
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>def</groupId>
-	<artifactId>def</artifactId>
+	<groupId>infos_deps</groupId>
+	<artifactId>infos_deps</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>infos_deps</groupId>
-			<artifactId>infos_deps</artifactId>
+			<groupId>infos_core</groupId>
+			<artifactId>infos_core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>def_fact</groupId>
-			<artifactId>def_fact</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>applications</groupId>
-			<artifactId>applications</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>javazoom</groupId>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
