--- a/desktop/applis/apps/sys_apps/sys_apps_gui/other/pom.xml
+++ b/desktop/applis/apps/sys_apps/sys_apps_gui/other/pom.xml
@@ -16,8 +16,8 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>infos_core</groupId>
-			<artifactId>infos_core</artifactId>
+			<groupId>infos_deps</groupId>
+			<artifactId>infos_deps</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
