--- a/desktop/applis/apps/adv/gui_fct/pom.xml
+++ b/desktop/applis/apps/adv/gui_fct/pom.xml
@@ -18,8 +18,8 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>mock_gui</groupId>
-			<artifactId>mock_gui</artifactId>
+			<groupId>mock_gui_adv</groupId>
+			<artifactId>mock_gui_adv</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
