--- a/desktop/applis/apps/bean/bean_games/pom.xml
+++ b/desktop/applis/apps/bean/bean_games/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>bean_games</artifactId>
 	<packaging>pom</packaging>
 	<modules>
+		<module>cardgamescommonbean</module>
 		<module>belotebean</module>
 		<module>presidentbean</module>
 		<module>tarotbean</module>
