--- a/desktop/applis/apps/bean/bean_games/belotebean/pom.xml
+++ b/desktop/applis/apps/bean/bean_games/belotebean/pom.xml
@@ -13,29 +13,14 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>cardgamescommon</groupId>
-			<artifactId>cardgamescommon</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>belote</groupId>
 			<artifactId>belote</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>formatconst</groupId>
-			<artifactId>formatconst</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-            <groupId>bean_core</groupId>
-            <artifactId>bean_core</artifactId>
+            <groupId>cardgamescommonbean</groupId>
+            <artifactId>cardgamescommonbean</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-		<dependency>
-			<groupId>scripts_core</groupId>
-			<artifactId>scripts_core</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
 	</dependencies>
 </project>
