--- a/desktop/applis/apps/adv/mock_gui/pom.xml
+++ b/desktop/applis/apps/adv/mock_gui/pom.xml
@@ -57,5 +57,15 @@
 			<artifactId>tarotbean</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>bean_help</groupId>
+			<artifactId>bean_help</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>graphs</groupId>
+			<artifactId>graphs</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 </project>
